# GaugeReader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.txt
